# Bing_DesignPattern

./: .gitignore
2_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
4_1_factoryMethod/: CMakeLists.txt  main.cpp
4_2_simple_factory_method/: CMakeLists.txt  main.cpp
